--- a/eComm_Reporting_Application.csproj
+++ b/eComm_Reporting_Application.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="bootstrap.chosen" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="3.1.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.15" />
