--- a/JSON Report Parameter Mapping.json
+++ b/JSON Report Parameter Mapping.json
@@ -1420,24 +1420,32 @@
               "value": "Banner_Number",
               "label": "Banner_Name"
             },
+            "ViewBy": {
+              "type": "Dropdown",
+              "query_type": "Fixed",
+              "query": "",
+              "value": "Matrix Dept,Merchandising Dept",
+              "label": "Matrix Dept,Merchandising Dept",
+              "default_val": "Matrix Dept"
+            },
             "Department_No": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
-              "query": "Par_rpt_Departments_by_Banner",
-              "value": "Department_Number",
-              "label": "Department"
+              "query": "Par_rpt_MatrixOrMechandisingDepartments_By_Banner",
+              "value": "Dept_Number",
+              "label": "Dept_FullName"
             },
             "Class_Number": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
-              "query": "par_Class_Details_by_Banner",
+              "query": "Par_rpt_MatrixOrMechandisingClass_by_Banner",
               "value": "Class_Number",
               "label": "Class"
             },
             "Category": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
-              "query": "par_Category_by_Banner",
+              "query": "Par_rpt_MatrixOrMechandisingCategory_by_Banner",
               "value": "Category_Number",
               "label": "Category"
             },
@@ -1517,6 +1525,14 @@
               "label": "Vendor",
               "default_val": "ALL"
             },
+            "Exclude_Vendor": {
+              "type": "Dropdown",
+              "query_type": "Fixed",
+              "query": "",
+              "value": "Include All",
+              "label": "Include All",
+              "default_val": "Include All"
+            },
             "Fiscal_Year": {
               "type": "Dropdown",
               "query_type": "Stored Procedure",
@@ -1545,7 +1561,7 @@
               "query": "",
               "value": "Y,N",
               "label": "Yes,No",
-              "default_val": "No"
+              "default_val": "N"
             },
             "Display_PY_Data": {
               "type": "Dropdown",
@@ -1553,7 +1569,7 @@
               "query": "",
               "value": "Y,N",
               "label": "Yes,No",
-              "default_val": "No"
+              "default_val": "N"
             }
           }
         },
@@ -2193,7 +2209,7 @@
               "label": "Season",
               "default_val": "selectAll"
             },
-            "Trend_Flag": {
+            "Trend": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
               "query": "par_rpt_Trend",
@@ -2381,7 +2397,7 @@
               "label": "Buy_Type",
               "default_val": "selectAll"
             },
-            "Trend_Flag": {
+            "Trend": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
               "query": "par_rpt_Trend",
@@ -2602,7 +2618,7 @@
               "label": "Buy_Type",
               "default_val": "selectAll"
             },
-            "Trend_Flag": {
+            "Trend": {
               "type": "MultiDropdown",
               "query_type": "Stored Procedure",
               "query": "par_rpt_Trend",
