Adding (ALL) to Add New Sierra Report Subscription

--- a/JSON Report Parameter Mapping - Sierra.json
+++ b/JSON Report Parameter Mapping - Sierra.json
@@ -44,7 +44,7 @@
                 "value": "DimFacilityID",
                 "label": "FacilityName"
               },
-              "PackedDateRangeDays": {
+              "PackedDateRange": {
                 "type": "Textbox",
                 "query_type": "Fixed",
                 "query": "",
